[package]
name = "demo-rust-lettre-async-tokio1-rustls-tls"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "rustls-tls",
]}
tokio = { version = "1", features = ["full"] }
